package-source/2GP/core-app/objects/Custom_Object__c/Custom_Object__c.object-meta.xml
<CustomObject>
    <description>A simple custom object added in ver 3.0 of the package to test the intersection of Apex class versions and custom object</description>
    <label>Custom Object</label>
    <nameField>
        <label>Record Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>