package-source/2GP/core-app/objects/Custom_Object__c/fields/Custom_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_1__c</fullName>
    <description>Custom field that was added in ver 3.0 of the package with a length of 100.</description>
    <inlineHelpText>Custom field that was added in ver 3.0 of the package with a length of 100.</inlineHelpText>
    <label>Custom Field 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>