package-source/2GP/core-app/objects/Custom_Object__c/fields/Custom_Field_2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_2__c</fullName>
    <description>Custom field that was added in ver 4.0 of the package with a length of 200.</description>
    <inlineHelpText>Custom field that was added in ver 4.0 of the package with a length of 200.</inlineHelpText>
    <label>Custom Field 2</label>
    <length>200</length>
    <type>Text</type>
</CustomField>