package-source/2GP/core-app/objects/Custom_Object__c/fields/Custom_Field_3__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_3__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field added in 6.0.0.1 (BETA) with a default value of Unchecked</description>
    <label>Custom Field 3</label>
    <type>Checkbox</type>
</CustomField>